@@ -250,6 +250,27 @@ typedef enum WBXMLLanguage_e {
 } WBXMLLanguage;
 
 
+/** Supported WBXML Charsets MIBEnum */
+typedef enum WBXMLCharsetMIBEnum_e {
+  WBXML_CHARSET_UNKNOWN         = 0,       /**< Unknown Charset */
+  WBXML_CHARSET_US_ASCII        = 3,       /**< US-ASCII */
+  WBXML_CHARSET_ISO_8859_1      = 4,       /**< ISO-8859-1 */
+  WBXML_CHARSET_ISO_8859_2      = 5,       /**< ISO-8859-2 */
+  WBXML_CHARSET_ISO_8859_3      = 6,       /**< ISO-8859-3 */
+  WBXML_CHARSET_ISO_8859_4      = 7,       /**< ISO-8859-4 */
+  WBXML_CHARSET_ISO_8859_5      = 8,       /**< ISO-8859-5 */
+  WBXML_CHARSET_ISO_8859_6      = 9,       /**< ISO-8859-6 */
+  WBXML_CHARSET_ISO_8859_7      = 10,      /**< ISO-8859-7 */
+  WBXML_CHARSET_ISO_8859_8      = 11,      /**< ISO-8859-8 */
+  WBXML_CHARSET_ISO_8859_9      = 12,      /**< ISO-8859-9 */
+  WBXML_CHARSET_SHIFT_JIS       = 17,      /**< Shift_JIS */
+  WBXML_CHARSET_UTF_8           = 106,     /**< UTF-8 */
+  WBXML_CHARSET_ISO_10646_UCS_2 = 1000,    /**< ISO-10646-UCS-2 */
+  WBXML_CHARSET_UTF_16          = 1015,    /**< UTF-16 */
+  WBXML_CHARSET_BIG5            = 2026     /**< Big5 */
+} WBXMLCharsetMIBEnum;
+
+
 #if defined( WBXML_SUPPORT_WV )
 /** Wireless-Village Specific Data Types */
 typedef enum WBXMLWVDataType_e {
@@ -279,6 +300,7 @@ typedef enum WBXMLGenXMLType_e {
 typedef struct WBXMLGenXMLParams_s {
     WBXMLGenXMLType gen_type;    /**< WBXML_GEN_XML_COMPACT | WBXML_GEN_XML_INDENT | WBXML_GEN_XML_CANONICAL (Default: WBXML_GEN_XML_INDENT) */
     WBXMLLanguage lang;          /**< Force document Language (overwrite document Public ID) */
+    WBXMLCharsetMIBEnum charset; /**< Set document Language (does not overwrite document character set) */
     WB_UTINY indent;             /**< Indentation Delta, when using WBXML_GEN_XML_INDENT Generation Type (Default: 0) */
     WB_BOOL keep_ignorable_ws;   /**< Keep Ignorable Whitespaces (Default: FALSE) */
 } WBXMLGenXMLParams;
